# fetch

./: Cargo.toml  README.md  bundle.sh
.github/workflows/: bundle-macos.yml
docs/: index.html  styles.css
src/: app.rs  extensions.rs  main.rs  platform.rs  search.rs  url.rs
src/apps/: app_string.rs  app_substr.rs  fs.rs  index.rs  mod.rs  url.rs
src/command/: mod.rs
src/extensions/: deterministic_search.rs
src/fs/: apps.rs  config.rs  db.rs  mod.rs
src/gui/: gpui_app.rs  search_bar.rs
src/platform/: mac.rs
src/ui/: app_entry.rs  app_list.rs  gpui_app.rs  mod.rs  search_bar.rs  search_engine.rs  search_results.rs
