[package]
name = "fetch"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
arcstr = "1.2.0"
global-hotkey = "0.7.0"
gpui = "0.2.2"
gpui-component = "0.4.1"
rayon = "1.11.0"
scc = "3.3.7"
unicase = "2.8.1"
unicode-segmentation = "1.12.0"

[profile.release]
codegen-units = 1
lto = "fat"

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.3"

[lints] 
clippy = { pedantic = "deny" }

[package.metadata.bundle]
name = "Fetch"
identifier = "org.birds.fetch"
version = "0.2.0"
category = "Developer Tool"
short_description = "Opinionated & super fast app launcher."
