[package]
name = "Fetch"
version = "0.4.1"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
arcstr = { version = "1.2.0", features = ["serde"] }
dirs = "6.0.0"
global-hotkey = "0.7.0"
gpui = "0.2.2"
gpui-component = "0.4.1"
rayon = "1.11.0"
scc = { version = "3.3.7", features = ["serde"] }
serde = "1"
serde_json = "1"
tokio = "1.48.0"
unicase = "2.8.1"
unicase_serde = "0.1.0"
unicode-segmentation = "1.12.0"

[profile.release]
codegen-units = 1
lto = "fat"

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.3"

[lints] 
clippy = { pedantic = "deny" }

[package.metadata.bundle]
name = "Fetch"
icon = ["icon.png", "icon@2x.png"]
identifier = "org.birds.fetch"
version = "0.4.1"
category = "Developer Tool"
short_description = "Opinionated & super fast app launcher."
