[package]
name = "Fetch"
version = "0.9.1"
edition = "2024"
rust-version = "1.91.0"

[dependencies]
arcstr = { version = "1.2.0", features = ["serde"] }
dirs = "6.0.0"
global-hotkey = "0.7.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
rayon = "1.11.0"
rootcause = "0.11.1"
scc = { version = "3.5.6", features = ["serde"] }
serde = "1"
serde_json = "1"
tokio = "1.49.0"
trie-rs = "0.4.2"
unicase = "2.9.0"
unicase_serde = "0.1.0"
unicode-segmentation = "1.12.0"

[profile.release]
codegen-units = 1
lto = "fat"

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3.1"
plist = "1.8.0"
smappservice-rs = "0.1.3"

[lints] 
clippy = { pedantic = "deny" }

[package.metadata.bundle]
name = "Fetch"
icon = ["icon.png", "icon@2x.png"]
identifier = "org.birds.fetch"
version = "0.9.1"
category = "Developer Tool"
short_description = "Launch and switch between apps quickly"
